--- a/style.scss
+++ b/style.scss
@@ -10,17 +10,13 @@ html {
 
 body {
   font: 1.7rem "Work Sans", sans-serif;
+  margin: 0;
 }
 
 #navbar {
-  height: 100%;
-  width: var(--navbar-width);
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
-  border-right: 0.2rem solid $black;
+  height: 20rem;
+  overflow-y: scroll;
+  border-bottom: 0.2rem solid $black;
 
   header {
     padding: 2rem;
@@ -37,8 +33,25 @@ body {
   }
 }
 
+@media (min-width: 800px) {
+  #navbar {
+    height: 100% !important;
+    width: var(--navbar-width);
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    border-right: 0.2rem solid $black;
+    border-bottom: 0 !important;
+  }
+
+  #main-doc {
+    margin-left: var(--navbar-width) !important;
+  }
+}
+
 #main-doc {
-  margin: 1rem 4rem 5rem var(--navbar-width);
+  margin: 1rem 4rem 5rem 1rem;
 
   .main-section {
     header {
