fix navbar scrollbars not showing

--- a/style.css
+++ b/style.css
@@ -12,9 +12,21 @@ body {
 }
 
 #navbar {
-  height: 20rem;
-  overflow-y: scroll;
   border-bottom: 0.2rem solid black;
+}
+
+#navbar .links {
+  height: 20rem;
+  overflow-y: auto;
+}
+
+#navbar .links::-webkit-scrollbar {
+  width: 10px;
+}
+
+#navbar .links::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #navbar header {
@@ -41,6 +53,9 @@ body {
     left: 0;
     border-right: 0.2rem solid black;
     border-bottom: 0 !important;
+  }
+  #navbar .links {
+    height: calc(100% - 7.2rem);
   }
   #main-doc {
     margin-left: var(--navbar-width) !important;
@@ -75,5 +90,15 @@ body {
   margin: 1rem 0 1rem 5rem;
   display: block;
   border-radius: 0.5rem;
+  overflow-x: auto;
+}
+
+#main-doc .main-section code::-webkit-scrollbar {
+  height: 10px;
+}
+
+#main-doc .main-section code::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 /*# sourceMappingURL=style.css.map */
